Added markdownand comments and docstrings

--- a/lesson-2_quantization_techniques/exercise_1/starter/starter.ipynb
+++ b/lesson-2_quantization_techniques/exercise_1/starter/starter.ipynb
@@ -1,26 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "46253a23",
+   "metadata": {},
+   "source": [
+    "# Import Required Libraries and Set Up Configuration\n",
+    "This cell imports the necessary libraries and sets up the configuration for the model, device, and random seed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "009e9ac1-df12-439f-a19c-108b6629eaff",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import standard libraries for file handling, math operations, and context management\n",
     "import os, shutil, time, math, gc, tempfile, json, contextlib\n",
     "from dataclasses import dataclass\n",
     "\n",
+    "# Import PyTorch for deep learning operations\n",
     "import torch\n",
+    "\n",
+    "# Import Hugging Face Transformers for tokenization and model loading\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
+    "# Import Hugging Face Datasets for dataset handling\n",
     "from datasets import load_dataset\n",
     "\n",
-    "# Optimum (Quanto) for post-training quantization (static, weight-only int8)\n",
+    "# Import Optimum Quanto for post-training quantization\n",
     "from optimum.quanto import quantize, freeze, qint8\n",
     "\n",
+    "# Define model ID and device configuration\n",
     "MODEL_ID = \"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"\n",
     "DEVICE   = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "SEED     = 42\n",
     "\n",
+    "# Set random seed for reproducibility\n",
     "torch.manual_seed(SEED)\n",
     "if DEVICE == \"cuda\":\n",
     "    torch.cuda.manual_seed_all(SEED)"
@@ -31,7 +48,8 @@
    "id": "3ffbc05f-e232-48cc-888d-0aafdae30dac",
    "metadata": {},
    "source": [
-    "# Utilities"
+    "# Utilities\n",
+    "This section contains utility functions for measuring directory size, monitoring GPU memory, and defining data structures for metrics."
    ]
   },
   {
@@ -41,7 +59,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to calculate the size of a directory in megabytes\n",
     "def dir_size_mb(path: str) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the total size of a directory in megabytes.\n",
+    "\n",
+    "    Args:\n",
+    "        path (str): Path to the directory.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Total size in megabytes.\n",
+    "    \"\"\"\n",
     "    total = 0\n",
     "    for root, _, files in os.walk(path):\n",
     "        for f in files:\n",
@@ -56,9 +84,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Context manager to monitor GPU memory usage\n",
     "@contextlib.contextmanager\n",
     "def torch_cuda_monitor():\n",
-    "    \"\"\"Context manager to measure peak GPU memory in MB.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Context manager to measure peak GPU memory usage in megabytes.\n",
+    "\n",
+    "    Yields:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    if DEVICE == \"cuda\":\n",
     "        torch.cuda.reset_peak_memory_stats()\n",
     "        torch.cuda.synchronize()\n",
@@ -69,7 +103,7 @@
     "            torch.cuda.synchronize()\n",
     "            peak = torch.cuda.max_memory_allocated()\n",
     "            torch.cuda.empty_cache()\n",
-    "            # return values indirectly by storing on the function object\n",
+    "            # Return values indirectly by storing on the function object\n",
     "            torch_cuda_monitor.peak_mb = peak / (1024**2)\n",
     "            torch_cuda_monitor.start_mb = start_alloc / (1024**2)\n",
     "    else:\n",
@@ -87,11 +121,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data class to store generation metrics\n",
     "@dataclass\n",
     "class GenMetrics:\n",
+    "    \"\"\"\n",
+    "    Data class to store metrics for text generation.\n",
+    "\n",
+    "    Attributes:\n",
+    "        latency_s (float): Latency in seconds.\n",
+    "        tokens_per_sec (float): Tokens generated per second.\n",
+    "        peak_gpu_mem_mb (float): Peak GPU memory usage in megabytes.\n",
+    "    \"\"\"\n",
     "    latency_s: float\n",
     "    tokens_per_sec: float\n",
     "    peak_gpu_mem_mb: float"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65c5fbe1",
+   "metadata": {},
+   "source": [
+    "# Measure Text Generation Performance\n",
+    "This function measures latency, throughput, and peak GPU memory usage during text generation."
    ]
   },
   {
@@ -102,7 +154,19 @@
    "outputs": [],
    "source": [
     "def measure_generate(model, tokenizer, prompt: str, max_new_tokens=64, runs=3) -> GenMetrics:\n",
-    "    \"\"\"Measure latency, throughput, and peak GPU memory for text generation.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Measure latency, throughput, and peak GPU memory for text generation.\n",
+    "\n",
+    "    Args:\n",
+    "        model: The language model to evaluate.\n",
+    "        tokenizer: The tokenizer associated with the model.\n",
+    "        prompt (str): Input prompt for text generation.\n",
+    "        max_new_tokens (int): Maximum number of new tokens to generate.\n",
+    "        runs (int): Number of runs for averaging metrics.\n",
+    "\n",
+    "    Returns:\n",
+    "        GenMetrics: Metrics including latency, throughput, and peak GPU memory.\n",
+    "    \"\"\"\n",
     "    model.eval()\n",
     "    inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
     "    inputs = {k: v.to(DEVICE) for k, v in inputs.items()}\n",
@@ -137,6 +201,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7821621f",
+   "metadata": {},
+   "source": [
+    "# Compute Perplexity\n",
+    "This function computes the perplexity of the model using a small built-in evaluation text."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5021512a-31a3-4838-a7bd-49b17bda4886",
@@ -148,6 +221,14 @@
     "    \"\"\"\n",
     "    Self-contained perplexity estimate using a small built-in eval text.\n",
     "    Keeps evaluation light but still allows FP32 vs INT8 comparison.\n",
+    "\n",
+    "    Args:\n",
+    "        model: The language model to evaluate.\n",
+    "        tokenizer: The tokenizer associated with the model.\n",
+    "        seq_len (int): Sequence length for evaluation.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Estimated perplexity of the model on the evaluation text.\n",
     "    \"\"\"\n",
     "    eval_text = (\n",
     "        \"Quantization reduces the precision of neural network weights and activations. \"\n",
@@ -187,6 +268,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "757d156d",
+   "metadata": {},
+   "source": [
+    "# Save Model and Measure Size\n",
+    "This function saves the model and tokenizer to a specified directory and calculates the directory size."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "843a4a98-1347-4eee-8320-6565e3fbf56e",
@@ -194,12 +284,32 @@
    "outputs": [],
    "source": [
     "def save_and_size(model, tokenizer, out_dir: str) -> float:\n",
+    "    \"\"\"\n",
+    "    Save the model and tokenizer to the specified directory and return the directory size.\n",
+    "\n",
+    "    Args:\n",
+    "        model: The language model to save.\n",
+    "        tokenizer: The tokenizer associated with the model.\n",
+    "        out_dir (str): Output directory for saving the model and tokenizer.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Size of the saved model and tokenizer directory in megabytes.\n",
+    "    \"\"\"\n",
     "    if os.path.exists(out_dir):\n",
     "        shutil.rmtree(out_dir)\n",
     "    os.makedirs(out_dir, exist_ok=True)\n",
     "    tokenizer.save_pretrained(out_dir)\n",
     "    model.save_pretrained(out_dir, safe_serialization=True)\n",
     "    return dir_size_mb(out_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcfa0869",
+   "metadata": {},
+   "source": [
+    "# Print Metrics Row\n",
+    "This function prints a formatted row of metrics for a model."
    ]
   },
   {
@@ -210,10 +320,30 @@
    "outputs": [],
    "source": [
     "def print_row(title, size_mb, lat_s, tps, gpu_mb, ppl):\n",
+    "    \"\"\"\n",
+    "    Print a formatted row of metrics.\n",
+    "\n",
+    "    Args:\n",
+    "        title (str): Title for the row (e.g., model name).\n",
+    "        size_mb (float): Size in megabytes.\n",
+    "        lat_s (float): Latency in seconds.\n",
+    "        tps (float): Throughput in tokens per second.\n",
+    "        gpu_mb (float): Peak GPU memory usage in megabytes.\n",
+    "        ppl (float): Perplexity value.\n",
+    "    \"\"\"\n",
     "    print(\n",
     "        f\"{title:18s} | Size: {size_mb:8.1f} MB | Latency: {lat_s:7.3f} s | \"\n",
     "        f\"Throughput: {tps:7.2f} tok/s | Peak VRAM: {gpu_mb:7.1f} MB | PPL: {ppl:7.2f}\"\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a511f0d",
+   "metadata": {},
+   "source": [
+    "# Load Tokenizer\n",
+    "This cell loads the tokenizer for the specified model and ensures padding tokens are set."
    ]
   },
   {
@@ -223,10 +353,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the tokenizer for the specified model\n",
     "tokenizer = AutoTokenizer.from_pretrained(MODEL_ID, use_fast=True)\n",
     "# Some chat models have no pad token; make generation/perplexity robust:\n",
     "if tokenizer.pad_token_id is None:\n",
     "    tokenizer.pad_token_id = tokenizer.eos_token_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32adbd82",
+   "metadata": {},
+   "source": [
+    "# Baseline FP32 Model Evaluation\n",
+    "This cell loads the baseline FP32 model, measures its size, latency, throughput, and perplexity, and prints the results."
    ]
   },
   {
@@ -237,6 +377,7 @@
    "outputs": [],
    "source": [
     "print(\"\\n== Baseline FP32 ==\")\n",
+    "# Load the baseline FP32 model\n",
     "baseline_model = AutoModelForCausalLM.from_pretrained(\n",
     "    MODEL_ID,\n",
     "    torch_dtype=torch.float32,\n",
@@ -244,7 +385,9 @@
     ")\n",
     "baseline_model.to(DEVICE)\n",
     "\n",
+    "# Save and measure the size of the baseline model\n",
     "baseline_size_mb = save_and_size(baseline_model, tokenizer, out_dir=\"tinyllama_fp32\")\n",
+    "# Measure generation metrics for the baseline model\n",
     "baseline_gen = measure_generate(\n",
     "    baseline_model,\n",
     "    tokenizer,\n",
@@ -252,10 +395,21 @@
     "    max_new_tokens=128,\n",
     "    runs=3,\n",
     ")\n",
+    "# Compute perplexity for the baseline model\n",
     "baseline_ppl = compute_perplexity(baseline_model, tokenizer, seq_len=128)\n",
     "\n",
+    "# Print the metrics for the baseline model\n",
     "print_row(\"FP32 (baseline)\", baseline_size_mb, baseline_gen.latency_s, baseline_gen.tokens_per_sec,\n",
     "          baseline_gen.peak_gpu_mem_mb, baseline_ppl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32bfec50",
+   "metadata": {},
+   "source": [
+    "# Quantized INT8 Model Evaluation\n",
+    "This cell performs post-training quantization (PTQ) on the model, measures its size, latency, throughput, and perplexity, and prints the results."
    ]
   },
   {
@@ -266,6 +420,7 @@
    "outputs": [],
    "source": [
     "print(\"\\n== PTQ INT8 (Optimum-Quanto, weight-only) ==\")\n",
+    "# Load the FP32 model for quantization\n",
     "q_model = AutoModelForCausalLM.from_pretrained(\n",
     "    MODEL_ID,\n",
     "    torch_dtype=torch.float32,\n",
@@ -278,8 +433,10 @@
     "freeze(q_model)               # finalize quantization graphs / params\n",
     "q_model.to(DEVICE)\n",
     "\n",
+    "# Save and measure the size of the quantized model\n",
     "q_size_mb = save_and_size(q_model, tokenizer, out_dir=\"tinyllama_int8_quanto\")\n",
     "\n",
+    "# Measure generation metrics for the quantized model\n",
     "q_gen = measure_generate(\n",
     "    q_model,\n",
     "    tokenizer,\n",
@@ -287,9 +444,20 @@
     "    max_new_tokens=128,\n",
     "    runs=3,\n",
     ")\n",
+    "# Compute perplexity for the quantized model\n",
     "q_ppl = compute_perplexity(q_model, tokenizer, seq_len=128)\n",
     "\n",
+    "# Print the metrics for the quantized model\n",
     "print_row(\"INT8 (Quanto)\", q_size_mb, q_gen.latency_s, q_gen.tokens_per_sec, q_gen.peak_gpu_mem_mb, q_ppl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a36579e",
+   "metadata": {},
+   "source": [
+    "# Save Summary as JSON\n",
+    "This cell saves the evaluation metrics for both the FP32 and INT8 models into a JSON file."
    ]
   },
   {
@@ -358,12 +526,13 @@
    "id": "d4493789-c6de-4184-a1a0-d71950f6d97b",
    "metadata": {},
    "source": [
-    "# Part 2"
+    "# Part 2: CPU Quantization and Evaluation\n",
+    "This section demonstrates dynamic quantization on CPU and evaluates the model's performance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2c0ced22-a4a4-4678-a05a-9894682ea773",
    "metadata": {},
    "outputs": [
@@ -402,6 +571,19 @@
     "torch.set_num_threads(max(1, os.cpu_count() or 1))  # let PyTorch use available cores\n",
     "\n",
     "def measure_generate(model, tokenizer, prompt=PROMPT, max_new_tokens=MAX_NEW_TOKENS, runs=RUNS):\n",
+    "    \"\"\"\n",
+    "    Measure latency and throughput for text generation on CPU.\n",
+    "\n",
+    "    Args:\n",
+    "        model: The language model to evaluate.\n",
+    "        tokenizer: The tokenizer associated with the model.\n",
+    "        prompt (str): Input prompt for text generation.\n",
+    "        max_new_tokens (int): Maximum number of new tokens to generate.\n",
+    "        runs (int): Number of runs for averaging metrics.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple: Average latency and throughput for text generation.\n",
+    "    \"\"\"\n",
     "    model.eval()\n",
     "    tokenizer.padding_side = \"left\"\n",
     "    enc = tokenizer(prompt, return_tensors=\"pt\").to(DEVICE)\n",
@@ -470,7 +652,8 @@
    "id": "366feef7-53fa-42c5-bf87-dbd46d4d0117",
    "metadata": {},
    "source": [
-    "# [EX-1] Calibration set + Static PTQ (Optimum)"
+    "# [EX-1] Calibration Set + Static PTQ (Optimum)\n",
+    "This section contains placeholders for implementing static PTQ using a calibration dataset."
    ]
   },
   {
@@ -555,7 +738,8 @@
    "id": "da140ae8-b046-48cf-b3cc-6ebc0c421901",
    "metadata": {},
    "source": [
-    "# [EX-2] Prompt-length sensitivity sweep"
+    "# [EX-2] Prompt-Length Sensitivity Sweep\n",
+    "This section contains placeholders for measuring latency and throughput across different prompt lengths."
    ]
   },
   {
@@ -683,7 +867,8 @@
    "id": "ce6624c6-9c4e-4b63-9fe4-5150ddce8e72",
    "metadata": {},
    "source": [
-    "# [EX-3] KV-cache & padding-side ablation"
+    "# [EX-3] KV-Cache and Padding-Side Ablation\n",
+    "This section contains placeholders for evaluating the impact of KV-cache and padding-side configurations."
    ]
   },
   {
@@ -727,7 +912,8 @@
    "id": "a8faab46-8ac7-43da-94c3-ff55d6183782",
    "metadata": {},
    "source": [
-    "# [EX-4] Batch size sensitivity (micro-batching)"
+    "# [EX-4] Batch Size Sensitivity (Micro-Batching)\n",
+    "This section contains placeholders for evaluating the model's performance with different batch sizes."
    ]
   },
   {
@@ -797,7 +983,8 @@
    "id": "3d3601e2-f8e4-4860-9aea-d07d3be3458d",
    "metadata": {},
    "source": [
-    "# Measuring Disk size + peak memory accounting (Nothing to Implement)"
+    "# Measuring Disk Size and Peak Memory Usage\n",
+    "This section contains utility functions for measuring the disk size of saved models and peak memory usage during execution."
    ]
   },
   {
@@ -848,7 +1035,8 @@
    "id": "2afc2eb3-a382-4cd3-843b-852291abbe9f",
    "metadata": {},
    "source": [
-    "# [EX-6] Quality proxy: pseudo-perplexity"
+    "# [EX-6] Quality Proxy: Pseudo-Perplexity\n",
+    "This section contains placeholders for implementing pseudo-perplexity as a quality proxy for the models."
    ]
   },
   {
@@ -915,7 +1103,8 @@
    "id": "bb4d4e09-d4b1-4e5e-93a4-dee1b2ce7227",
    "metadata": {},
    "source": [
-    "# [EX-7] Results table + short reflection"
+    "# [EX-7] Results Table and Reflection\n",
+    "This section contains placeholders for building a results table summarizing the evaluation metrics."
    ]
   },
   {
@@ -956,7 +1145,8 @@
    "id": "ebf3cd0d-83d9-4537-9abd-aa103436beff",
    "metadata": {},
    "source": [
-    "# [EX-8 - Stretch] Edge-case prompts check"
+    "# [EX-8 - Stretch] Edge-Case Prompts Check\n",
+    "This section contains placeholders for testing the models with edge-case prompts."
    ]
   },
   {
@@ -1005,7 +1195,8 @@
    "id": "df1b4f84-09b6-4e5c-bfd2-0405e6146213",
    "metadata": {},
    "source": [
-    "# Master controller for the quantization exercise"
+    "# Master Controller for the Quantization Exercise\n",
+    "This cell orchestrates the execution of all parts of the quantization exercise."
    ]
   },
   {
@@ -1128,6 +1319,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "baa237a9",
+   "metadata": {},
+   "source": [
+    "# Run the Quantization Exercise\n",
+    "This cell runs the master controller function to execute all parts of the quantization exercise."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "c5a70128-3f1e-41d2-8c40-d10aaf7bf47f",
@@ -1164,7 +1364,9 @@
    "id": "21c4fc3f-9820-46d7-9102-a50fd9d53773",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Empty cell for additional code or notes."
+   ]
   }
  ],
  "metadata": {
