Added markdowns to the solutions

--- a/lesson-2_quantization_techniques/exercise_1/solution/solution.ipynb
+++ b/lesson-2_quantization_techniques/exercise_1/solution/solution.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4ebd7af3",
+   "metadata": {},
+   "source": [
+    "# Import Required Libraries and Set Up Configuration\n",
+    "This cell:\n",
+    "- Imports standard libraries for file handling, math operations, and context management.\n",
+    "- Imports PyTorch for deep learning operations.\n",
+    "- Imports Hugging Face Transformers for tokenization and model loading.\n",
+    "- Imports Optimum Quanto for post-training quantization.\n",
+    "- Sets up the model ID, device configuration, and random seed for reproducibility."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "009e9ac1-df12-439f-a19c-108b6629eaff",
@@ -34,7 +48,11 @@
    "id": "3ffbc05f-e232-48cc-888d-0aafdae30dac",
    "metadata": {},
    "source": [
-    "# Utilities"
+    "# Utilities\n",
+    "This section contains utility functions:\n",
+    "- To measure the size of a directory in megabytes.\n",
+    "- To monitor GPU memory usage during execution.\n",
+    "- To define a data structure for storing generation metrics."
    ]
   },
   {
@@ -98,6 +116,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a50c86ee",
+   "metadata": {},
+   "source": [
+    "# Measure Text Generation Performance\n",
+    "This function:\n",
+    "- Measures the latency, throughput, and peak GPU memory usage during text generation.\n",
+    "- Performs a warmup run to stabilize performance.\n",
+    "- Uses multiple runs to calculate average metrics for better accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "2f1c4a50-a21c-431e-8e82-41ce16df3aa9",
@@ -137,6 +167,18 @@
     "        tokens_per_sec=sum(tps)/len(tps),\n",
     "        peak_gpu_mem_mb=getattr(torch_cuda_monitor, \"peak_mb\", 0.0),\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ee795b5",
+   "metadata": {},
+   "source": [
+    "# Compute Perplexity\n",
+    "This function:\n",
+    "- Computes the perplexity of the model using a small built-in evaluation text.\n",
+    "- Evaluates how well the model predicts text by calculating the negative log-likelihood.\n",
+    "- Compares FP32 and INT8 models to observe the impact of quantization on perplexity."
    ]
   },
   {
@@ -190,6 +232,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b590ab5",
+   "metadata": {},
+   "source": [
+    "# Save Model and Measure Size\n",
+    "This function:\n",
+    "- Saves the model and tokenizer to a specified directory.\n",
+    "- Measures the size of the saved directory in megabytes.\n",
+    "- Ensures the directory is cleaned before saving to avoid conflicts."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "843a4a98-1347-4eee-8320-6565e3fbf56e",
@@ -203,6 +257,18 @@
     "    tokenizer.save_pretrained(out_dir)\n",
     "    model.save_pretrained(out_dir, safe_serialization=True)\n",
     "    return dir_size_mb(out_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "644c858e",
+   "metadata": {},
+   "source": [
+    "# Print Metrics Row\n",
+    "This function:\n",
+    "- Prints a formatted row of metrics for a model.\n",
+    "- Includes metrics such as size, latency, throughput, peak GPU memory, and perplexity.\n",
+    "- Provides a clear and concise summary of model performance."
    ]
   },
   {
@@ -220,6 +286,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b59212f",
+   "metadata": {},
+   "source": [
+    "# Load Tokenizer\n",
+    "This cell:\n",
+    "- Loads the tokenizer for the specified model.\n",
+    "- Ensures that padding tokens are set to make generation and perplexity calculations robust."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "7748cbea-a298-4251-90e0-2de38d68dde4",
@@ -230,6 +307,18 @@
     "# Some chat models have no pad token; make generation/perplexity robust:\n",
     "if tokenizer.pad_token_id is None:\n",
     "    tokenizer.pad_token_id = tokenizer.eos_token_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1471785",
+   "metadata": {},
+   "source": [
+    "# Baseline FP32 Model Evaluation\n",
+    "This cell:\n",
+    "- Loads the baseline FP32 model.\n",
+    "- Measures the model's size, latency, throughput, and perplexity.\n",
+    "- Prints the evaluation metrics for the baseline model."
    ]
   },
   {
@@ -269,6 +358,18 @@
     "\n",
     "print_row(\"FP32 (baseline)\", baseline_size_mb, baseline_gen.latency_s, baseline_gen.tokens_per_sec,\n",
     "          baseline_gen.peak_gpu_mem_mb, baseline_ppl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40a5902e",
+   "metadata": {},
+   "source": [
+    "# Quantized INT8 Model Evaluation\n",
+    "This cell:\n",
+    "- Performs post-training quantization (PTQ) on the model using Optimum Quanto.\n",
+    "- Measures the quantized model's size, latency, throughput, and perplexity.\n",
+    "- Prints the evaluation metrics for the quantized model."
    ]
   },
   {
@@ -316,8 +417,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56370cdd",
+   "metadata": {},
+   "source": [
+    "# Save Summary as JSON\n",
+    "This cell:\n",
+    "- Saves the evaluation metrics for both the FP32 and INT8 models into a JSON file.\n",
+    "- Provides a structured summary of the results for further analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bcd0af01-42ac-42f6-a745-69f5669f918b",
    "metadata": {},
    "outputs": [
@@ -331,7 +443,6 @@
     }
    ],
    "source": [
-    "\n",
     "# --- 5) Summary JSON (optional) ----------------------------------------------\n",
     "summary = {\n",
     "    \"device\": DEVICE,\n",
@@ -363,7 +474,11 @@
    "id": "d4493789-c6de-4184-a1a0-d71950f6d97b",
    "metadata": {},
    "source": [
-    "# Part 2"
+    "# Part 2: CPU Quantization and Evaluation\n",
+    "This section:\n",
+    "- Demonstrates dynamic quantization on CPU using PyTorch.\n",
+    "- Evaluates the model's performance in terms of latency and throughput.\n",
+    "- Compares the FP32 and INT8 dynamic quantized models."
    ]
   },
   {
@@ -473,7 +588,11 @@
    "id": "366feef7-53fa-42c5-bf87-dbd46d4d0117",
    "metadata": {},
    "source": [
-    "# [EX-1] Calibration set + Static PTQ (Optimum)"
+    "# [EX-1] Calibration Set + Static PTQ (Optimum)\n",
+    "This section:\n",
+    "- Implements static PTQ using a calibration dataset.\n",
+    "- Prepares a set of calibration texts and builds a DataLoader for calibration.\n",
+    "- Uses Optimum-Intel to perform static quantization and save the quantized model."
    ]
   },
   {
@@ -624,7 +743,10 @@
    "id": "da140ae8-b046-48cf-b3cc-6ebc0c421901",
    "metadata": {},
    "source": [
-    "# [EX-2] Prompt-length sensitivity sweep"
+    "# [EX-2] Prompt-Length Sensitivity Sweep\n",
+    "This section:\n",
+    "- Measures latency and throughput across different prompt lengths for each model.\n",
+    "- Plots the results to visualize the impact of prompt length on performance."
    ]
   },
   {
@@ -684,7 +806,10 @@
    "id": "ce6624c6-9c4e-4b63-9fe4-5150ddce8e72",
    "metadata": {},
    "source": [
-    "# [EX-3] KV-cache & padding-side ablation"
+    "# [EX-3] KV-Cache and Padding-Side Ablation\n",
+    "This section:\n",
+    "- Evaluates the impact of KV-cache and padding-side configurations on model performance.\n",
+    "- Measures latency and throughput under different scenarios."
    ]
   },
   {
@@ -730,7 +855,10 @@
    "id": "a8faab46-8ac7-43da-94c3-ff55d6183782",
    "metadata": {},
    "source": [
-    "# [EX-4] Batch size sensitivity (micro-batching)"
+    "# [EX-4] Batch Size Sensitivity (Micro-Batching)\n",
+    "This section:\n",
+    "- Evaluates the model's performance with different batch sizes.\n",
+    "- Measures latency and per-sample throughput for each batch size."
    ]
   },
   {
@@ -780,7 +908,10 @@
    "id": "3d3601e2-f8e4-4860-9aea-d07d3be3458d",
    "metadata": {},
    "source": [
-    "# [EX-5] Disk size + peak memory accounting"
+    "# [EX-5] Disk Size and Peak Memory Accounting\n",
+    "This section:\n",
+    "- Contains utility functions for measuring the disk size of saved models.\n",
+    "- Includes a context manager for tracking peak CPU and GPU memory usage during execution."
    ]
   },
   {
@@ -876,12 +1007,15 @@
    "id": "2afc2eb3-a382-4cd3-843b-852291abbe9f",
    "metadata": {},
    "source": [
-    "# [EX-6] Quality proxy: pseudo-perplexity"
+    "# [EX-6] Quality Proxy: Pseudo-Perplexity\n",
+    "This section:\n",
+    "- Implements pseudo-perplexity as a quality proxy for the models.\n",
+    "- Measures how well the model predicts tokens in a leave-one-out style evaluation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "53645c63-3689-49a5-a5e2-97ffa7180ff2",
    "metadata": {},
    "outputs": [],
@@ -921,7 +1055,7 @@
     "    scores = {}\n",
     "    for name, model in models.items():\n",
     "        scores[name] = [pseudo_perplexity(model, tokenizer, t) for t in texts]\n",
-    "    return scores\n"
+    "    return scores"
    ]
   },
   {
@@ -929,12 +1063,15 @@
    "id": "bb4d4e09-d4b1-4e5e-93a4-dee1b2ce7227",
    "metadata": {},
    "source": [
-    "# [EX-7] Results table + short reflection"
+    "# [EX-7] Results Table and Reflection\n",
+    "This section:\n",
+    "- Builds a results table summarizing the evaluation metrics for all models.\n",
+    "- Includes metrics such as size, latency, throughput, and pseudo-perplexity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "63a1a5d1-0212-43b7-af46-33f83d396b19",
    "metadata": {},
    "outputs": [],
@@ -954,8 +1091,7 @@
     "            \"precision\",\"size_bytes\",\"size_MB\",\n",
     "            \"lat_64\",\"tps_64\",\"lat_256\",\"tps_256\",\"ppplx_avg\"\n",
     "        ] if c in df.columns\n",
-    "    ]]\n",
-    "\n"
+    "    ]]"
    ]
   },
   {
@@ -963,7 +1099,10 @@
    "id": "ebf3cd0d-83d9-4537-9abd-aa103436beff",
    "metadata": {},
    "source": [
-    "# [EX-8 - Stretch] Edge-case prompts check"
+    "# [EX-8 - Stretch] Edge-Case Prompts Check\n",
+    "This section:\n",
+    "- Tests the models with edge-case prompts to evaluate their robustness.\n",
+    "- Generates outputs for challenging prompts and compares the results."
    ]
   },
   {
@@ -993,7 +1132,11 @@
    "id": "df1b4f84-09b6-4e5c-bfd2-0405e6146213",
    "metadata": {},
    "source": [
-    "# Master controller for the quantization exercise"
+    "# Master Controller for the Quantization Exercise\n",
+    "This cell:\n",
+    "- Orchestrates the execution of all parts of the quantization exercise.\n",
+    "- Runs experiments such as prompt-length sweep, cache/padding ablation, and batch-size sensitivity.\n",
+    "- Collects and summarizes results in a structured format."
    ]
   },
   {
@@ -1127,6 +1270,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5859c787",
+   "metadata": {},
+   "source": [
+    "# Run the Quantization Exercise\n",
+    "This cell:\n",
+    "- Executes the master controller function to run all parts of the quantization exercise.\n",
+    "- Collects and prints the results for analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "c5a70128-3f1e-41d2-8c40-d10aaf7bf47f",
@@ -1224,12 +1378,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "361cc503",
+   "metadata": {},
+   "source": [
+    "# Additional Notes or Code\n",
+    "This cell is reserved for any additional notes or code that may be required."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d239912b-e168-4344-9dd9-cf278bf884bf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ...existing code..."
+   ]
   }
  ],
  "metadata": {
